--- a/promo.html
+++ b/promo.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>HELLO WORLD <span>promo</span></h1> 
-    
+    <p>fucking day today today lorem    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cum fugiat assumenda nemo. Dicta vel, ullam unde esse rem debitis, vero cupiditate, provident rerum odit labore nihil fuga magni? Fugit.git add </p>
     </body>
 </html>
