modif de promo2 sur branche dev1

--- a/promo2.html
+++ b/promo2.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <h1>HELLO WORLD <span>promo</span></h1> 
-        <P>fucking day</P>
+        <P>fucking day todaygit status
+            fghfjhgfjfjytujytfjghcvgfjytfcjtyfu
+        </P>
     
     </body>
 </html>
