2eme modif sur promo2

--- a/promo2.html
+++ b/promo2.html
@@ -11,6 +11,8 @@
         <P>fucking day todaygit status
             fghfjhgfjfjytujytfjghcvgfjytfcjtyfu
         </P>
+
+        <p>2 sdjqkfhjkhjkdhdfjgfdjf</p>
     
     </body>
 </html>
