modif sur branche master entre dev2 et dev3

--- a/promo2.html
+++ b/promo2.html
@@ -8,11 +8,13 @@
     </head>
     <body>
         <h1>HELLO WORLD <span>promo</span></h1> 
-        <P>fucking day todaygit status
+        <P>fucking day today 
             fghfjhgfjfjytujytfjghcvgfjytfcjtyfu
         </P>
 
         <p>2 sdjqkfhjkhjkdhdfjgfdjf</p>
+
+        <p>ghfjgfjhfytyrgjhytjycvjgffjhfjuyoiuoihulkjklggdfgserterabedrcrfjgùerojdù</p>
     
     </body>
 </html>
