modif sur promo sur branch devA

--- a/promo.html
+++ b/promo.html
@@ -12,4 +12,6 @@
     </body>
 
     <p>hgfd bloody mary is partie dljhdlkfjhsqliruezyqohk   rouge  fiqsluehflqzuhfblushdfeskudehro</p>
+
+    <h3>git</h3>
 </html>
