modif promo2.html sur serveur1

--- a/promo2.html
+++ b/promo2.html
@@ -15,6 +15,6 @@
         <p>2 sdjqkfhjkhjkdhdfjgfdjf</p>
 
         <p>ghfjgfjhfytyrgjhytjycvjgffjhfjuyoiuoihulkjklggdfgserterabedrcrfjgùerojdù</p>
-    
+        <p> es tu certaine d'avoir compris?</p>
     </body>
 </html>
