modif sur promo2.html sur tratanpionne

--- a/promo2.html
+++ b/promo2.html
@@ -16,5 +16,6 @@
 
         <p>ghfjgfjhfytyrgjhytjycvjgffjhfjuyoiuoihulkjklggdfgserterabedrcrfjgùerojdù</p>
     
+        <p>2eme journée de git un peu de mal a pass du coq à l'ane</p>
     </body>
 </html>
