test tag passé du serveur 1 au serveur tartanpionne

--- a/promo2.html
+++ b/promo2.html
@@ -19,5 +19,7 @@
     
         <p>2eme journée de git un peu de mal a pass du coq à l'ane</p>
 
+        <p> mon  premier tag sera the best</p>
+
     </body>
 </html>
